[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Folclore <folclore@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pydantic-settings = "^2.4.0"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
uvloop = "^0.20.0"
unidecode = "^1.3.8"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
bot = 'python -m bot.bot'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
run = 'bot'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
